@@ -30,10 +30,6 @@ minOSVersion_Intel::Express_530 = 1.00.23
 minOSVersion_Accton::ES3526XA = 2.3.3.5
 minOSVersion_Dell::PowerConnect3424 = 112
 minOSVersion_3COM::NJ220 = 2.0.23
-database_hostname = localhost
-database_dbname = pf
-database_user = pf
-database_password = pf
 mail_hostname = 127.0.0.1
 mail_to = root@localhost
 mail_from = root@localhost
